<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_dark">

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ser_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:enabled="true"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/ser_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:enabled="false"
            android:text="@string/btn_stop" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/view_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:enabled="true"
            android:text="@string/view_start" />

        <Button
            android:id="@+id/view_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:enabled="false"
            android:text="@string/view_stop" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/scr_keep_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:enabled="true"
            android:text="@string/btn_scr_start" />

        <Button
            android:id="@+id/scr_keep_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:enabled="false"
            android:text="@string/btn_scr_stop" />
    </LinearLayout>
    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/btn_tether"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_tether">
    </Button>
    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_camera">
    </Button>

    <Button
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_thermal_info"
        android:text="@string/btn_thermal"/>

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/btn_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_network" />
    <Button
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_log_interval"
        android:text="@string/btn_settei"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_view_setting"
        android:text="@string/btn_view_settei"/>

</LinearLayout>


